adding project to git

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,6 @@
-middle
+<div>
+    <h2>Recently Added</h2>
+    <% books.forEach(book=> { %>
+        <img height="150" width="100" src="<%= book.coverImagePath %> ">
+        <% }); %>
+</div>
