--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/author.css" />
     <title>Library</title>
 </head>
 
 <body>
-    Before
-    <br>
-    <%- body %>
-    <br>
-    After
+    <%- include('../partials/_header.ejs') %>
+    <div class="container">
+        <%- include('../partials/_errorMsg.ejs') %>
+        <%- body %>
+    </div>
 </body>
 
 </html>
