added book route

--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -7,10 +7,17 @@
     <button class="btn" type="submit">Search</button>
 </form>
 <br>
-<h2>All Authors</h2>
+<h2 class="heading">All Authors</h2>
 <div class="authors">
     <% authors.forEach(author => { %>
-        <div class="author"><%= author.name %> </div>
+        <div class="author">
+            <div><%= author.name %></div>
+            <div>
+                <a href="/authors/<%= author.id %> " class="btn">View</a>
+                <a href="/authors/<%= author.id %>/edit " class="btn">Edit</a>
+                <%- include('../partials/_deleteForm', {url: `/authors/${author.id}`}) %>
+            </div>
+        </div>
         <br>
     <% }); %> 
 </div>
