--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -24,9 +24,9 @@
 </div>
 <div class="field">
     <label for="cover">Cover:</label>
-    <input type="file" name="cover">
+    <input type="file" size="60" name="cover" class="filepond">
 </div>
 <div class="field">
     <label for="description">Description:</label>
-    <textarea name="description" cols="30" rows="5"><%= book.description %> </textarea>
+    <textarea name="description" cols="30" rows="3"><%= book.description %> </textarea>
 </div>
