--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,11 +1,13 @@
 <header>
     <nav>
-        <a href="/" class="logo">Library</a>
+        <a href="/" class="logo">
+            <img src="/logo.png" alt="logo">
+        </a>
         <ul>
-            <li><a href="/authors">Authors</a></li>
-            <li><a href="/authors/new">Add Author</a></li>
-            <li><a href="/Books">Books</a></li>
-            <li><a href="/Books/new">Add Book</a></li>
+            <li><a title="authors" href="/authors">Authors</a></li>
+            <li><a title="Add Author" href="/authors/new">Add Author</a></li>
+            <li><a title="Books" href="/Books">Books</a></li>
+            <li><a title="Add Book" href="/Books/new">Add Book</a></li>
         </ul>
     </nav>
 </header>
