--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,24 +12,36 @@ header {
 }
 nav {
     display: flex;
-    align-items: center;
+    font-size: 1.7rem;
+    /* align-items: center; */
     justify-content: space-between;
+    margin-bottom: 2rem;
 }
 .logo {
     font-size: 2rem;
     color: rgb(163, 214, 44);
     text-decoration: none;
-    padding: 5px;
-    border: 2px solid rgb(218, 192, 192);
-    border-radius: 70px;
-
+    margin-left: 1rem;
+    /* padding: 5px; */
+    /* border: 2px solid rgb(218, 192, 192);
+    border-radius: 70px; */
+}
+.logo img {
+    height: 90px;
+    width: 90px;
+    border-radius: 50%;
 }
 nav ul {
+    width: 80%;
+    margin-top: 0;
     display: flex;
+    justify-content: flex-end;
+    align-items: center;
     list-style: none;
+    border-bottom: 1px dotted rgb(158, 127, 127);
 }
 nav ul li {
-    margin: 1rem;
+    margin: 0 1rem;
 }
 nav ul li a {
     color: white;
@@ -46,6 +58,7 @@ nav ul li a:hover {
 .container {
     width: 60%;
     margin: auto;
+    min-height: 72vh;
     text-align: center;
 }
 .errorMsg {
@@ -74,6 +87,7 @@ label {
 }
 input, select, textarea {
     width: 100%;
+    color: rgb(212 44 44);;
     font-size: 1.2rem;
     border-radius: 10px;
     outline: none;
@@ -81,8 +95,13 @@ input, select, textarea {
     border: 2px solid rgba(0, 0, 0, 0);
     margin-bottom: 10px;
 }
+.form-fields {
+    display: flex;
+    flex-wrap: wrap;
+}
 .field {
-    width: 50%;
+    width: 45%;
+    /* max-height: 8rem; */
     margin: auto;
     display: flex;
     text-align: start;
@@ -94,7 +113,7 @@ input, select, textarea {
 .btn {
     cursor: pointer;
     text-decoration: none;
-    color: black;
+    color: rgb(212 44 44);;
     font-weight: 100;
     font-size: 1.4rem;
     background-color: cyan;
@@ -105,7 +124,8 @@ input, select, textarea {
 }
 .authors {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
 }
@@ -114,9 +134,15 @@ input, select, textarea {
     border-radius: 10px;
     font-size: 1.5rem;
     padding: 5px;
-    width: 50%;
-    margin: auto;
+    width: 45%;
+    margin: 0.5rem;
+    /* margin: auto; */
     background-color: rgb(156, 104, 104);
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 .books {
     display: flex;
@@ -127,13 +153,28 @@ input, select, textarea {
 .book {
     margin: 0.5rem;
     border: 2px solid yellow;
+    width: 250px;
+    min-height: 250px;
+    word-wrap: break-word;
 }
 .book img {
-    height: 200px;
-    width: 150px;
+    height: 150px;
+    width: 100px;
+    margin: 1rem;
+    padding: 3px;
+    border: 1px solid salmon;
 }
-.btns {
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+.delete-btn {
+    display: inline;
+}
+.title {
+    margin: 5px;
+    color: silver;
+}
+footer {
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    text-align: center;
+    padding: 1rem;
+    margin-top: 1rem;
 }
