--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,6 +1,8 @@
 <h1>New Author</h1>
 <form action="/authors" method="POST">
-    <%- include("_form_fields")%>
+    <div class="form-fields">
+        <%- include("_form_fields")%>
+    </div>
     <div class="btns">
         <a class="btn" href="/authors">Cancel</a>
         <button class="btn" type="submit">Create</button>
