--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,6 +1,9 @@
 <h1>New Book</h1>
-<form action="/books" method="POST" enctype="multipart/form-data">
-    <%- include("_form_fields")%>
+<!-- <form action="/books" method="POST" enctype="multipart/form-data"> -->
+<form action="/books" method="POST">
+    <div class="form-fields">
+        <%- include("_form_fields")%>
+    </div>
     <div class="btns">
         <a class="btn" href="/books">Cancel</a>
         <button class="btn" type="submit">Create</button>
