added book view, delete and update route

--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -1,7 +1,7 @@
 <h1>Edit Author</h1>
 <form action="/authors/<%= author.id %>?_method=PUT" method="POST">
     <%- include("_form_fields") %>
-    <div class="btns">
+    <div>
         <a class="btn" href="/authors/<%= author.id %>">Cancel</a>
         <button class="btn" type="submit">Edit</button>
     </div>
