--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -3,7 +3,7 @@
     <div class="form-fields">
         <%- include("_form_fields")%>
     </div>
-    <div class="btns">
+    <div>
         <a class="btn" href="/authors">Cancel</a>
         <button class="btn" type="submit">Create</button>
     </div>
