--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -4,7 +4,7 @@
     <div class="form-fields">
         <%- include("_form_fields")%>
     </div>
-    <div class="btns">
+    <div>
         <a class="btn" href="/books">Cancel</a>
         <button class="btn" type="submit">Create</button>
     </div>
