--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+a {
+    text-decoration: none;
+}
 body {
     background-color: rgb(73, 42, 48);
     color: aliceblue;
@@ -178,3 +181,49 @@ footer {
     padding: 1rem;
     margin-top: 1rem;
 }
+.row {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.row img {
+    border: 2px solid purple;
+}
+.book-details {
+    margin: 1rem;
+    max-width: 75%;
+    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+.general {
+    display: flex;
+    justify-content: space-between;
+}
+.book-details > div {
+    margin-top: 0.1rem;
+    text-align: left;
+    overflow-wrap: break-word;
+}
+.desc-content {
+    font-size: 1.2rem;
+    color: rgb(207, 196, 188);
+}
+.btns {
+    text-align: left;
+}
+/* .filepond--root {
+  font-family: 'Gotham Rounded';
+  margin-bottom: 0;
+}
+
+.filepond--panel-root {
+  background-color: var(--form-input-background-color);
+  border: 1px solid var(--form-input-border-color);
+}
+
+.filepond--drop-label {
+  color: var(--color-text-light);
+  font-size: inherit;
+} */
