--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -8,8 +8,14 @@
     <div class="books">
         <% booksByAuthor.forEach(book=> { %>
             <div class="book">
-                <img height="150" width="100" src="<%= book.coverImagePath %> ">
-                <div class="title"><h2><%= book.title %></h2></div>
+                <a href="/books/<%= book.id %>">
+                    <img height="150" width="100" src="<%= book.coverImagePath %> ">
+                    <div class="title">
+                        <h2>
+                            <%= book.title %>
+                        </h2>
+                    </div>
+                </a>
             </div>
         <% }); %>
     </div>
