--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -20,13 +20,15 @@
     <div class="books">
         <% books.forEach(book=> { %>
             <div class="book">
-                <img height="150" width="100" src="<%= book.coverImagePath %> ">
-                <div class="title">
-                    <h2>
-                        <%= book.title %>
-                    </h2>
+                    <a href="/books/<%= book.id %>">
+                    <img height="150" width="100" src="<%= book.coverImagePath %> ">
+                    <div class="title">
+                        <h2>
+                            <%= book.title %>
+                        </h2>
+                    </div>
+                    </a>
                 </div>
-            </div>
         <% }); %>
     </div>
 </div>
