--- a/views/partials/_deleteForm.ejs
+++ b/views/partials/_deleteForm.ejs
@@ -1,3 +1,3 @@
-<form action="<%= url %>?_method=DELETE" method="post" class="delete-btn">
-    <button class="btn" type="submit">Delete</button>
+<form action="<%= url %>?_method=DELETE" method="post" class="btn">
+    <button class="btnf" style="width: 100%;" type="submit">Delete</button>
 </form>
